src/components/about-avi-page.module.scss
.about {
  height: 47rem;
  width: 100%;
  padding-top: 0.3rem;
  background: black;
  color: white;
  direction: rtl;
  text-align: center;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  p {
    margin-top: 1rem;
    font-size: 17px;
  }
}
.about_small {
  height: 67rem;
  width: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background: black;
  color: white;
  direction: rtl;
  text-align: center;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  p {
    margin-top: 1rem;
    font-size: 20px;
  }
}

.button_div {
  margin-bottom: 12px;
}

.text_container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.text {
  width: 85%;
  height: 67%;
}

.content_small {
  width: 52rem;
  background: white;
  color: black;
  border-radius: 8px;
  padding-top: 5rem;
  padding-bottom: 5rem;
  -moz-box-shadow:    inset 0 0 10px #000000;
  -webkit-box-shadow: inset 0 0 10px #000000;
  box-shadow:         inset 0 0 10px #000000;
  h1 {
    color: black;
    margin-top: 16px;
    font-size: 50px;
  }
}

.content {
  width: 52rem;
  background: white;
  color: black;
  border-radius: 8px;
  // padding-top: rem;
  padding-bottom: 1rem;
  -moz-box-shadow:    inset 0 0 10px #000000;
  -webkit-box-shadow: inset 0 0 10px #000000;
  box-shadow:         inset 0 0 10px #000000;
  h1 {
    color: black;
    margin-top: 16px;
    font-size: 50px;
  }
}

.office {
  width: 52rem;
  height: 20rem;
  border-radius: 8px 8px 0 0;
}

